2001-04-29  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (remassoc, remassq, remrassoc, remrassq): Fixed.

2001-03-26  Yuuichi Teranishi  <teranisi@gohome.org>

	* EMU-ELS: Add checking whether the native timezone.el has an old
	date string parser.

2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* timezone.el (timezone-parse-date): Import from Emacs-20.7.

2001-02-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (char-category for XEmacs): Don't use `int-char' when the
	function `char-category-list' returns a list of characters.

2001-02-01  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README.ja: Updated as to MAKEIT.BAT and MAKE1.BAT.
	* make1.bat: New file.
	* makeit.bat: Ditto.
	* make.bat: Removed.

2001-01-18  Katsumi Yamaoka   <yamaoka@jpl.org>

	* inv-19.el (next-visible-point): Return the value of `point-max'
	when the position of next `invisible' property change is not found.

2001-01-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (floor): Removed.

	* timezone.el (timezone-floor): New function.
	(timezone-fix-time-2): Use `timezone-floor' instead of `floor'.

2000-12-31  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README.ja: Typo fixed.

2000-12-30  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	*  APEL: Version 10.3 released.
	* apel-ver.el (apel-ver): Change APEL version to 10.3.

	* Makefile : Apply patch from TAKAHASHI Kaoru <kaoru@se.uec.ac.jp>
	of Message-Id: <86vgs2s3cp.wl@tomoko.nantnaq.kaisei.org>.

2000-12-28  Tanaka Akira      <akr@m17n.org>

	* pccl-20.el (ccl-compat): new advice for `make-coding-system' of
	XEmacs to handle Emacs style CCL coding system definition.

2000-12-28  Kenichi Handa     <handa@etl.go.jp>

	* static.el: Doc-string fixed.

2000-12-28  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mcharset.el (default-mime-charset-for-write): Use
	`mime-charset-p' instead of `find-coding-system'; don't require
	`pces'.
